--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <nav> 
-        <img src="imgs/icons/logoNetflix.png" alt="netflix">
+        <img src="../imgs/icons/logoNetflix.png" alt="netflix">
     </nav>
     <main>
         <div id="main-h1">
